# hackathon_260613

./: .env.example  .gitignore  BLOCKS.md  DAG.md  README.md  README_BENCHMARK.md  README_EXPERIMENT.md  SUGGESTED_CHANGES.md  kill.sh  pyproject.toml  verify.sh
agentic/: .env.example  README.md  pyproject.toml
agentic/examples/: quickstart.py
agentic/src/agentic/: blocks.py  (+12 more)
agentic/tests/: test_dashboard.py  test_pipeline.py  test_smoke.py
experiments/: base_model.py  pyproject.toml
experiments/attention_anagram/: .review.txt  README.md  benchmark.py  task.py
experiments/attention_and/: .review.txt  README.md  benchmark.py  task.py
experiments/attention_argmax/: .review.txt  README.md  benchmark.py  task.py
experiments/attention_argmin/: .review.txt  README.md  benchmark.py  task.py
experiments/attention_astar/: .review.txt  README.md  benchmark.py  task.py
experiments/attention_bfs/: .review.txt  README.md  benchmark.py  task.py
experiments/attention_bipartite/: .review.txt  README.md  benchmark.py  task.py
experiments/attention_block_2d/: .review.txt  README.md  benchmark.py  task.py
experiments/attention_boundary/: README.md  benchmark.py  task.py
experiments/attention_brackets/: .review.txt  README.md  benchmark.py  task.py
experiments/attention_cfg_generate/: .review.txt  README.md  benchmark.py  task.py
experiments/attention_connected_components/: README.md  benchmark.py  task.py
experiments/attention_constraint_prop/: .review.txt  README.md  benchmark.py  task.py
experiments/attention_count/: .review.txt  README.md  benchmark.py  task.py
experiments/attention_cyk/: .review.txt  README.md  benchmark.py  task.py
experiments/attention_dedupe/: .review.txt  README.md  benchmark.py  task.py
experiments/attention_dijkstra/: README.md  benchmark.py  task.py
experiments/attention_distance_compare/: .review.txt  README.md  benchmark.py  task.py
experiments/attention_dot_product/: .review.txt  README.md  benchmark.py  task.py
experiments/attention_dtw/: .review.txt  README.md  benchmark.py  task.py
experiments/attention_dyck/: .review.txt  README.md  benchmark.py  task.py
experiments/attention_edit_distance/: .review.txt  README.md  benchmark.py  task.py
experiments/attention_equality/: .review.txt  README.md  benchmark.py  task.py
experiments/attention_fsm/: README.md  benchmark.py  task.py
experiments/attention_game_of_life/: README.md  benchmark.py  task.py
experiments/attention_gcd/: README.md  benchmark.py  task.py
experiments/attention_global_align/: .review.txt  README.md  benchmark.py  task.py
experiments/attention_graph_color/: .review.txt  README.md  benchmark.py  task.py
experiments/attention_group_compose/: .review.txt  README.md  benchmark.py  task.py
experiments/attention_hierarchical_pool/: .review.txt  README.md  benchmark.py  task.py
(+2379 files in other folders)
