[project]
name = "agentic"
version = "0.0.1"
description = "Three-tier pipeline that picks BLOCKS.md tasks, scaffolds goals, runs attempts, and grades them."
requires-python = ">=3.11"
dependencies = [
    "claude-agent-sdk>=0.2",
    "fastapi>=0.136.3",
    "openai>=1.40",
    "python-dotenv>=1.0",
    "typer>=0.12",
    "uvicorn>=0.49.0",
]

[project.scripts]
agentic = "agentic.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agentic"]

[dependency-groups]
dev = [
    "mypy>=1.10",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.mypy]
strict = true
python_version = "3.11"
files = ["src"]

[[tool.mypy.overrides]]
module = ["gradio", "gradio.*", "matplotlib", "matplotlib.*", "pandas", "pandas.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
